<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".50"
        android:contentDescription="@string/fon"
        android:scaleType="fitXY"
        android:src="@drawable/boardwood" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/defaultMargin">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_0"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btnDot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn2"
            />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_dot"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btnEqually"
            app:layout_constraintEnd_toStartOf="@id/btnEqually"
            app:layout_constraintStart_toEndOf="@id/btn0"/>

        <Button
            android:id="@+id/btnEqually"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_Equally"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnDot"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:backgroundTint="@color/white"
            android:text="@string/key_1"
            android:textColor="@color/black"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            app:layout_constraintBottom_toTopOf="@id/btn0"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintStart_toStartOf="@id/btn0"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_2"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toTopOf="@id/btnDot"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintEnd_toStartOf="@id/btn3"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_3"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn2"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintEnd_toStartOf="@id/btnPlus"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_plus"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn3"
            app:layout_constraintStart_toEndOf="@id/btn3"
            app:layout_constraintEnd_toEndOf="@id/btnEqually"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:backgroundTint="@color/white"
            android:text="@string/key_4"
            android:textColor="@color/black"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            app:layout_constraintBottom_toTopOf="@id/btn1"
            app:layout_constraintEnd_toStartOf="@id/btn5"
            app:layout_constraintStart_toStartOf="@id/btn1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_5"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toTopOf="@id/btn2"
            app:layout_constraintStart_toEndOf="@id/btn4"
            app:layout_constraintEnd_toStartOf="@id/btn6"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_6"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn5"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintEnd_toStartOf="@id/btnMinus"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_minus"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn6"
            app:layout_constraintStart_toEndOf="@id/btn6"
            app:layout_constraintEnd_toEndOf="@id/btnPlus"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:backgroundTint="@color/white"
            android:text="@string/key_7"
            android:textColor="@color/black"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            app:layout_constraintBottom_toTopOf="@id/btn4"
            app:layout_constraintEnd_toStartOf="@id/btn8"
            app:layout_constraintStart_toStartOf="@id/btn4" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_8"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toTopOf="@id/btn5"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintEnd_toStartOf="@id/btn9"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_9"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn8"
            app:layout_constraintStart_toEndOf="@id/btn8"
            app:layout_constraintEnd_toStartOf="@id/btnMult"/>
        <Button
            android:id="@+id/btnMult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_mult"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btn9"
            app:layout_constraintStart_toEndOf="@id/btn9"
            app:layout_constraintEnd_toEndOf="@id/btnMinus"/>

        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_AC"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toTopOf="@id/btn7"
            app:layout_constraintBottom_toBottomOf="@id/btnDel"
            app:layout_constraintStart_toStartOf="@id/btn7"
            app:layout_constraintEnd_toEndOf="@id/btn8"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_del"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btnAC"
            app:layout_constraintEnd_toStartOf="@id/btnEqually"
            app:layout_constraintStart_toEndOf="@id/btnAC"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/key_Divide"
            android:textSize="@dimen/number"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:alpha=".5"
            app:layout_constraintBottom_toBottomOf="@id/btnDel"
            app:layout_constraintEnd_toEndOf="@id/btnMult"
            app:layout_constraintStart_toEndOf="@id/btnDel"/>

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:gravity="end|bottom"
            android:textSize="@dimen/calc_number"
            app:layout_constraintBottom_toTopOf="@id/btnAC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>